--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
           <div id="buttons">
           <form>
           <input type="email"required class="placeholder"placeholder="email@company.com"type="text">
-          </input></form> 
-          <button class="button"input type="submit"required> Subscribe to monthly newsletter</button>
+          </input></form>
+          <a href="thanks.html">
+          <button class="button"input type="submit"required> Subscribe to monthly newsletter</button></a>
           
        
       </div>
