--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h5> Email address</h5>
           <div id="buttons">
           <form>
-          <input type="email"spellcheck="false"class="placeholder"placeholder="email@company.com"type="text">
+          <input type="email"spellcheck="false"id="email-field"class="placeholder"placeholder="email@company.com"type="text">
           <span id="email-error">Valid email required</span>
           </input></form>
           <a href="thanks.html">
