--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
           <div id="buttons">
           <form>
           <input type="email"spellcheck="false"id="email-field"class="placeholder"placeholder="email@company.com"type="text">
-          </input></form>
+          </input>
           <a href="thanks.html">
           <button class="button"input type="submit"required> Subscribe to monthly newsletter</button></a>
-          
+          </form>
        
       </div>
       </div>
